--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
       - name: build
         run: npm run build
       - name: run tests
-        run: npx jest --testMatch "**/*.e2e.ts" --runInBand
+        run: npx jest --testMatch "**/*.e2e.ts" --runInBand --silent=false
         
   release:
     runs-on: ubuntu-latest
