--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "is-wsl": "^2.2.0",
     "libnpmsearch": "^5.0.3",
     "mkdirp": "^3.0.1",
+    "node-fetch": "^3.3.2",
     "npm-registry-fetch": "^13.1.1",
     "npmlog": "^6.0.2",
     "pkginfo": "^0.4.1",
