--- a/package.json
+++ b/package.json
@@ -78,11 +78,11 @@
     "pkginfo": "^0.4.1",
     "promptly": "^3.2.0",
     "semver": "^7.5.4",
-    "ts-brand": "^0.0.2",
     "ts-custom-error": "^3.3.1",
     "ts-results-es": "^4.1.0",
     "update-notifier": "^5.1.0",
-    "yaml": "^2.2.2"
+    "yaml": "^2.2.2",
+    "zod": "^3.23.8"
   },
   "volta": {
     "node": "18.20.2"
