--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: CI
 
-on: [push, pull_request]
+on: push
 
 jobs:
-  unit-test:
+  unit-test: 
     runs-on: ubuntu-latest
     strategy:
       matrix:
