--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-jsdoc": "^48.8.3",
     "fast-check": "^3.16.0",
     "jest": "^29.7.0",
+    "nock": "^13.5.5",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.5",
     "semantic-release": "^19.0.3",
